# spam_filtering_analysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  count_vectorizer.joblib  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml  requirements.txt
backend/: spam.ipynb
backend/backend/: settings.py  urls.py
backend/backend/templates/: index.html
backend/data/: naive_bayes_model.joblib  spam_naive_bayes.ipynb
frontend/: package-lock.json  rollup.config.js
frontend/src/: config.js  main-app.js
spam_filtering_backend/: manage.py
spam_filtering_backend/api/: classifier.py  tests.py  urls.py  views.py
spam_filtering_backend/data/: naive_bayes_classifier  p_ham.joblib  p_spam.joblib  parameters_ham.joblib  parameters_spam.joblib  spam_classifier_model.joblib  spam_naive_bayes.ipynb
spam_filtering_backend/spam_filtering_backend/: asgi.py  settings.py  urls.py  wsgi.py
spam_filtering_backend/storage/: models.py  serializers.py  urls.py  views.py
spam_filtering_backend/storage/migrations/: 0001_initial.py  0002_alter_mails_classifier.py
spam_filtering_backend/user/: models.py
