[tool.poetry]
name = "spam-filtering-analysis"
version = "0.1.0"
description = ""
authors = ["Tu2-prog <anhtuduong.nguyen@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
whitenoise = "^6.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
